新增事件监听

--- a/spring-boot-demo07-mybatis/src/main/resources/application.yml
+++ b/spring-boot-demo07-mybatis/src/main/resources/application.yml
@@ -3,10 +3,16 @@ server:
 
 spring:
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/test
-    username: root
-    password: root
+    db1:
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      jdbc-url: jdbc:mysql://localhost:3306/test
+      username: root
+      password: root
+    db2:
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      jdbc-url: jdbc:mysql://localhost:3306/sys
+      username: root
+      password: root
 
 #mybatis . config-location=classpath:mybatis-config. xml
 #mybatis:
